# drivers-net_mikrotik

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  InterfaceStats.hpp  Main.cpp  MikrotikRouterStatusMonitor.cpp  MikrotikRouterStatusMonitor.hpp  MikrotikRouterStatusMonitorConfig.hpp  MikrotikRouterStatusResponse.hpp  RESTAPI.cpp  RESTAPI.hpp  RESTAPIConfig.hpp  SatcommsStatus.cpp  SatcommsStatus.hpp
test/: CMakeLists.txt  rest_responses.json  test_Dummy.cpp  test_RESTAPI.cpp  test_SatcommsStatus.cpp
